# NetLicensingClient-cpp

./: CMakeLists.txt
include/netlicensing/: traversal.h  validation_parameters.h
src/: netlicensing.cc
